refactor: change timezone endpoint methods from PUT to POST and add webhook timer scheduling
